log
Thu 07 Sep 2023 07:21:47 PM UTC: 
 tests:  0|6
total_score: 0/70
89dad7a
Thu 07 Sep 2023 07:52:01 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5f79c9
Thu 07 Sep 2023 07:58:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
df85dfc
Thu 07 Sep 2023 08:01:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:7: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   int i = hash(key, map -> capacity);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
6cc2bd4
Thu 07 Sep 2023 08:04:45 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[i];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74e36d7
Sat 09 Sep 2023 12:10:32 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:39: error: ‘i’ undeclared (first use in this function)
   47 |   Pair *current_pair = map -> buckets[i];
      |                                       ^
hashmap.c:47:39: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[i];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4699f12
Sat 09 Sep 2023 12:10:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e41a4af
Sat 09 Sep 2023 12:13:36 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:9: error: unused variable ‘new_pair’ [-Werror=unused-variable]
   55 |   Pair* new_pair = createPair(key, value);
      |         ^~~~~~~~
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c5169e
Sat 09 Sep 2023 12:14:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ed0d8b4
